# simple-stt-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LOCAL_TRANSCRIPTION.md  README.md
.github/workflows/: ci.yml  release.yml
misc/aur/: .SRCINFO  PKGBUILD
src/: lib.rs  llm.rs  main.rs
src/audio/: mod.rs
src/clipboard/: mod.rs
src/config/: mod.rs
src/stt/: api.rs  local.rs  mod.rs  wav_utils.rs
src/tui/: app.rs  events.rs  ui.rs
src/ui/: mod.rs
