[package]
name = "simple-stt-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple speech-to-text CLI client with silence detection and configurable processing"
license = "MIT"
repository = "https://github.com/benhoman/simple-stt-rs"
keywords = ["speech-to-text", "audio", "cli", "whisper", "stt"]
categories = ["command-line-utilities", "multimedia::audio"]

[features]
default = []
# Note: Both API and local backends are always available

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Audio handling
cpal = "0.15"
hound = "3.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API backend
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Local transcription
whisper-rs = "0.12"

# Model downloading (optional, for future use)
hf-hub = { version = "0.3", features = ["tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and UUID utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# File system and paths
dirs = "5.0"
shellexpand = "3.1"
tempfile = "3.8"

# Clipboard support - Wayland native
wl-clipboard-rs = "0.9"

# Process and command execution
which = "4.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "simple-stt"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
